--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -1,6 +1,6 @@
 .hero_section{
     background-repeat: no-repeat;
-    background-image: url(../../img/Bitmap.png);
+    background-image: url(../img/Bitmap.png);
     background-size: cover;
     position: relative;
 }
@@ -17,7 +17,7 @@
     width: 186px;
     height: 62px;
     background-repeat: no-repeat;
-    background-image: url(../../img/hero-bg-icon.svg);
+    background-image: url(../img/hero-bg-icon.svg);
     position: absolute;
     right: 0;
     bottom: 26%;
