--- a/scss/block/_service.scss
+++ b/scss/block/_service.scss
@@ -23,7 +23,7 @@
     width: 96px;
     height: 96px;
     background-repeat: no-repeat;
-    background-image: url(../../img/service-icon.svg);
+    background-image: url(../img/service-icon.svg);
     position: absolute;
     left: 0;
     top: 0;
